# DecadesCompiler

./: CMakeLists.txt  README.md
RT/: CMakeLists.txt
RT/include/: DECADES.h  DECADES_decoupled.h  dec_atomics.h  dec_decoupling.h  desc.h  desc_DECADES.h
RT/src/: dcp_alloc.h  maple_decoupling.cpp  produce_consume.cpp  shmem_decoupling.cpp
hello_world/: main.cpp  main.cpp~
hello_world/decades_base/: decades_base  llvm_combined.ll  main_pp.cpp  main_visited.cpp  main_visited.cpp.ll
passes/: AlwaysInliner.cpp  CMakeLists.txt  DECVisitor.cpp  Decouple.h  DecoupleCompute.cpp  DecoupleSupply.cpp  DecoupleSupplyAddr.cpp  FindNMA.cpp  NumbaFunctionReplace.cpp  PrintFunctionCalls.cpp
passes/AlwaysInliner/: AlwaysInliner.cpp  CMakeLists.txt
passes/ClangVisitor/: .#DECDecoupleCpp.cpp  CMakeLists.txt  DECDecoupleCpp.cpp  DECDecoupleCpp.cpp~  DECGetKernels.cpp  DECVisitor.cpp
passes/DecoupleCommon/: Decouple.h  Decouple.h~
passes/DecoupleCompute/: CMakeLists.txt  DecoupleCompute.cpp
passes/DecoupleSupply/: CMakeLists.txt  DecoupleSupply.cpp  DecoupleSupplyAddr.cpp
passes/NumbaFunctionReplace/: CMakeLists.txt
passes/PrintFunctionCalls/: CMakeLists.txt  PrintFunctionCalls.cpp
scripts_build_deps/: 00_config  01_build_ct  02_build_toolchain  03_build_llvm  04_build_openmp  05_build_openmp  build.sh  linking_error.patch
utils/: CMakeLists.txt  DECpp.py
utils/DECLib/: CMakeLists.txt  DECADES.h  DECADES_Numba.cpp  DECADES_TensorFlow.h  DECADES_decoupled.h
utils/DecoupleServer/: CMakeLists.txt  compile_produce_consume_maple_commands  decpp_setenv.cpp  desc.h  produce_consume.cpp  produce_consume_maple.cpp  simple_barrier.h
utils/KernelProfiler/: CMakeLists.txt  KernelProfiler.cpp
utils/llvm/: atomic_add.llvm
utils/push_button_scripts/: decades_numba_presets  decades_tf_presets
utils/python/: .DEC_TensorFlow.py.swp  DEC_Numba_Lib.py  DEC_Numba_Lib.py~  DEC_Numba_Lib_Lite.py  DEC_Numba_Lib_Lite.py~  DEC_Pipeline.py  DEC_Pipeline.py~  DEC_TensorFlow.py
